[tool.poetry]
name = "comment-management"
version = "0.1.0"
description = ""
authors = ["Vadim Akhmetov <golden312va@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.101.1"
psycopg2-binary = "^2.9.10"
elasticsearch = "8.9.0"
pandas = "^2.2.3"
uvicorn = "0.23.2"
openpyxl = "^3.1.5"
pydantic-settings = "2.0.3"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
